# owon-xdm1000

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml  pypi_publish.yml
examples/: sweep_all_modes.py
tests/: test_import.py
xdm1000/: __init__.py  xdm1000.py
